force-app/main/default/objects/OPP_News__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>PM4U</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>QSHE</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Akanee</fullName>
                </value>
                <value>
                    <fullName>Special Issues</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                    <isActive>false</isActive>
                    <label>People</label>
                </value>
                <value>
                    <fullName>TOP Shop</fullName>
                    <isActive>false</isActive>
                    <label>TOP Shop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coin_Expire__c</fullName>
        <label>Coin Expire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coin_Type__c</fullName>
        <label>Coin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Vote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coin__c</fullName>
        <label>Coin</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <inlineHelpText>Recommend 
- Picture pixels :  1080 x 700 pixels
- Size : less than &lt; 5 Mb</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>File_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highlight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOX</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>Akanee</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Akanee</value>
        </filters>
        <label>Akanee</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_corporate</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Corporate</value>
        </filters>
        <label>Corporate</label>
    </listViews>
    <listViews>
        <fullName>Club</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Club</value>
        </filters>
        <label>Club</label>
    </listViews>
    <listViews>
        <fullName>Digital</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Digital</value>
        </filters>
        <label>Digital</label>
    </listViews>
    <listViews>
        <fullName>KM</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>KM</value>
        </filters>
        <label>KM</label>
    </listViews>
    <listViews>
        <fullName>Operation</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Operation</value>
        </filters>
        <label>Operation</label>
    </listViews>
    <listViews>
        <fullName>PM4U</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>PM4U</value>
        </filters>
        <label>PM4U</label>
    </listViews>
    <listViews>
        <fullName>QSHE</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Coin_Type__c</columns>
        <columns>Coin__c</columns>
        <columns>Highlight__c</columns>
        <columns>Publish_Date__c</columns>
        <columns>Expire_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>QSHE</value>
        </filters>
        <label>QSHE</label>
    </listViews>
    <nameField>
        <displayFormat>NEWS# {YYYY}.{MM}.{DD}.{000}</displayFormat>
        <label>News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_User_News_Admin_Category</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	OR(ISNEW(),
		OR(ISCHANGED(Category__c),
			OR(ISCHANGED(Coin__c),
				OR(ISCHANGED(Coin_Expire__c),
					OR(ISCHANGED(Coin_Type__c),
						OR(ISCHANGED(Content__c),
							OR(ISCHANGED(Expire_Date__c),
								OR(ISCHANGED(Highlight__c),
									OR(ISCHANGED(Link__c),
										OR(ISCHANGED(Publish_Date__c),
											OR(ISCHANGED(Status__c),
												OR(ISCHANGED(Sub_Category__c),
													OR(ISCHANGED(Subtitle__c),
														OR(ISCHANGED(Title__c), ISCHANGED(Video_Link__c))
													)
												)
											)
										)
									)
								)
							)
						)
					)
				)
			)
		)
	),
	NOT(
		IF(TEXT(Category__c) == &quot;PM4U&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;PM4U&quot;), true,
			IF(TEXT(Category__c) == &quot;People&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;People&quot;), true,
				IF(TEXT(Category__c) == &quot;KM&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;KM&quot;), true,
					IF(TEXT(Category__c) == &quot;Corporate&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Corporate&quot;), true,
						IF(TEXT(Category__c) == &quot;Digital&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Digital&quot;), true,
							IF(TEXT(Category__c) == &quot;QSHE&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;QSHE&quot;), true,
								IF(TEXT(Category__c) == &quot;Club&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Club&quot;), true,
									IF(TEXT(Category__c) == &quot;Akanee&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Akanee&quot;), true,
										IF(TEXT(Category__c) == &quot;Special Issues&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Special Issues&quot;), true, IF(TEXT(Category__c) == &quot;Operation&quot; &amp;&amp; INCLUDES($User.OPP_News_Admin_Category__c, &quot;Operation&quot;), true, false
											)
										)
									)
								)
							)
						)
					)
				)
			)
		)
	)
)</errorConditionFormula>
        <errorMessage>Only News administrator for this category can create news.</errorMessage>
    </validationRules>
</CustomObject>